scenario01/1-http-sw-app.yaml
apiVersion: v1
kind: Pod
metadata:
  name: poddefault
  labels:
    type: my-pod
spec:
  containers:
  - name: poddefault
    image: praqma/network-multitool
    command: ["bin/sh", "-c", "sleep 10000"] 
  nodeName: k8s1
---
apiVersion: v1
kind: Pod
metadata:
  name: podfoo
  labels:
    type: my-pod
spec:
  serviceAccountName: foo
  containers:
  - name: podfoo
    image: praqma/network-multitool
    command: ["bin/sh", "-c", "sleep 10000"] 
  nodeName: k8s2
